--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "nodemon": "^3.0.1",
-    "pnpm": "^8.7.6"
+    "pnpm": "^8.7.6",
+    "uuid": "^9.0.1"
   }
 }
